...
                                        <accessibility key="accessibilityConfiguration" identifier="clearButton"/>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="16"/>
                                        <state key="normal" title="Clear">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                                <rect key="frame" x="20" y="5" width="98" height="29"/>
                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                <state key="normal" title="Product Name">
                                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                        <rect key="frame" x="0.0" y="5" width="47" height="29"/>
                                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                        <state key="normal" title="Source">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="0.0" y="5" width="74" height="29"/>
                                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                        <state key="normal" title="PYCM Sold">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="0.0" y="5" width="54" height="29"/>
                                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                        <state key="normal" title="Commit">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="0.0" y="5" width="30" height="29"/>
                                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                        <state key="normal" title="Sold">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                <rect key="frame" x="0.0" y="5" width="46" height="29"/>
                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                <state key="normal" title="Month">
                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <rect key="frame" x="0.0" y="5" width="44" height="29"/>
                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                <state key="normal" title="Status">
                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opportunities" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q82-fR-W2P">
                                <rect key="frame" x="32" y="44" width="192" height="34"/>
                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="30"/>
...
