...
            <objects>
                <viewController storyboardIdentifier="AccountsViewControllerID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="dbN-91-cfd" customClass="AccountsViewController" customModule="SWSApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="IC9-HP-g2l">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accounts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMq-Mf-lek">
                                <rect key="frame" x="476" y="374" width="72" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oWE-4c-9Ky">
...
                                                            <color key="textColor" name="Data New"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ouc-Fo-9xZ">
                                                            <rect key="frame" x="578" y="0.0" width="116" height="40"/>
                                                            <subviews>
                                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Details" translatesAutoresizingMaskIntoConstraints="NO" id="fmM-s7-Nln" userLabel="Arrow">
                                                                    <rect key="frame" x="-20" y="0.0" width="20" height="40"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="width" constant="20" id="AeK-gm-aKa"/>
                                                                        <constraint firstAttribute="height" constant="40" id="ulC-sk-Nhp"/>
                                                                    </constraints>
                                                                </imageView>
...
