...
protocol NavigateToContactsDelegate {
    func navigateTheScreenToContactsInPersistantMenu(data : LoadThePersistantMenuScreen)
}

class AccountVisitSummaryViewController: UIViewController {
    
    var scheduledHeadingArray = ["Location","Account Situation","Goals","Challenges"]
    var inprogressHeadingArray = ["Location","Associated Contacts","Opportunities Selected","Service Purposes","Agenda Notes","Account Situation","Goals","Challenges"]
    
    var subHeadingArray = ["Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.","Lorem Ipsum is simply dummy text of the printing and typesetting industry.","Lorem Ipsum is simply dummy tevarof the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever sinc
    var opportunitiesArray = ["Manage Returns","Delivery Fulfillnt","POS"]
    var servicePurposeArray = ["Point of sale","Store/Display Setup","Sample and Tasting"]
    
...
